# svx2vdb

./: AUTHORS  INSTALL  Makefile.am  NEWS  README  README.md  build  configure  configure.ac  svx2vdb.cc
examples/: urchin.svx  urchin.vdb
src/: Makefile.am  svx2vdb.cc
test/: Makefile.am  convert.sh
